src/21-service-discovery/service-with-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: randomizer
spec:
  type: LoadBalancer
  selector:
    app: randomizer
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
