src/21-service-discovery/service-with-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: randomizer
spec:
  type: NodePort
  selector:
    app: randomizer
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    nodePort: 32766
