src/21-service-discovery/service.yml
apiVersion: v1
kind: Service
metadata:
  name: randomizer
spec:
  selector:
    app: randomizer
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
