src/21-service-discovery/ingress-with-dispatch.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: randomizer
spec:
  rules:                              # <1>
  - http:
      paths:
      - path: /
        backend:
          serviceName: randomizer
          servicePort: 8080
      - path: /status
        backend:
          serviceName: service-status
          servicePort: 80
