src/21-service-discovery/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: randomizer
spec:
  defaultBackend:
    service:
      name: randomizer
      port:
        number: 8080
